# safari-client-tauri

./: .gitignore  LICENSE  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release-legacy.yml  release.yml
docs/: PRD.md
docs/plans/: safari_client_rewrite_6a2f82a0.plan.md
scripts/: bump-version.sh  release-version-legacy.sh  release-version.sh  tag-version-legacy.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.updater/: signing.key.pub
src-tauri/icons/: icon.icns
src-tauri/resources/: elenco_pesci_2019.csv  elenco_pesci_2026.csv
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: csv_import.rs  export.rs  images.rs  mod.rs  persistence.rs  preferences.rs  species.rs
src-tauri/src/imaging/: exif.rs  mod.rs  thumbnails.rs  transform.rs
src-tauri/src/models/: mod.rs  preferences.rs  slide.rs  species.rs
src/lib/: app.svelte.ts  theme.ts  thumbnails.test.ts  types.ts  updater.ts
src/lib/actions/: nonPassiveWheel.ts
src/lib/components/: CompetitorExportDialog.svelte  ConfirmDialog.svelte  EmptyState.svelte  Lightbox.svelte  LoadProgressOverlay.svelte  NavBar.svelte  SettingsDialog.svelte  SlideGrid.svelte  SlideTile.svelte  SpeciesModal.svelte  SpeciesOverview.svelte  TabBar.svelte
src/lib/utils/: i18n.ts  transform.test.ts  transform.ts
src/routes/: +layout.svelte  +page.svelte
