[package]
name = "safari-client"
version = "0.1.0"
description = "Safari Client — scheda concorrente per Safari Fotosub"
authors = ["maxdrift"]
edition = "2021"

[lib]
name = "safari_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }
anyhow = "1"
thiserror = "2"
once_cell = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
